discussion/kv_engine/175752/175752_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52158: Check for RangeScan privilege in continue/cancel

A range-scan requires that the user has the RangeScan privilege
somewhere in the "path" to the collection. For RangeScan create
this is checked by mcbp_privileges as the incoming command states
which collection the scan is against.

For continue/cancel the engine must do the checks as it needs to
locate the scan and then the scan's collection.

A "bonus" of this is that the collection is also existence checked
during the checkPrivilege method, allowing continue to 'force'
cancel the scan if the collection rather than waiting for the scan
to move forward (load a key) and fail in range_scan_callbacks.cc

Change-Id: I3e1b6ad043e9d377aa897b8a2a64a637f36ac7a9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-06-06 13:31:18.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-06 14:44:41.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46613/ : FAILURE

Failure of GoogleTest "TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
unknown file: error: C++ exception with description "EOF: connection reset" thrown in the test body.
[  FAILED  ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (19 ms)
TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46613/ )

Timeout of a CTest test 426/426 Test #260: ep-engine_ep_unit_tests.RangeScanFullAndValueEviction/RangeScanTest .....................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46613/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17929/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.cc:223:28: error: out-of-line definition of "hasPrivilege" does not match any declaration in "RangeScan" [clang-diagnostic-error]
cb::engine_errc RangeScan::hasPrivilege(
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:100:40: error: unknown type name "EventuallyPersistentEngine" [clang-diagnostic-error]
                                 const EventuallyPersistentEngine& engine);
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:221:37: error: out-of-line definition of "hasPrivilege" does not match any declaration in "VB::RangeScanOwner" [clang-diagnostic-error]
cb::engine_errc VB::RangeScanOwner::hasPrivilege(
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.h:157:19: error: unknown type name "EventuallyPersistentEngine" [clang-diagnostic-error]
            const EventuallyPersistentEngine& engine) const;
                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17929/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.cc:223:28:
error: out-of-line definition of "hasPrivilege" does not match any declaration in "RangeScan" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17929/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39176/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan.h:100:40:
error: unknown type name "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39176/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28160/ : FAILURE

Compile error at [2022-06-06T14:04:31.760Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6240" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28160/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7588/ : FAILURE

Compile error at [2022-06-06T13:50:47.391Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6240" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7588/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18959/ : FAILURE

Failure of GoogleTest "TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
[2022-06-06T14:44:22.903Z] unknown file: Failure
[2022-06-06T14:44:22.903Z] C++ exception with description "EOF: Connection reset by peer" thrown in the test body.
[2022-06-06T14:44:22.903Z] [  FAILED  ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (12 ms)
TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18959/ )

Timeout of a CTest test [2022-06-06T14:44:02.649Z] 318/446 Test #267: ep-engine_ep_unit_tests.RangeScanFullAndValueEviction/RangeScanTest .....................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18959/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19767/ : FAILURE

Compile error at [2022-06-06T14:03:51.026Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/buckets_test.cc:18:34:
error: static assertion failed: Bucket size changed, the reset test must be updated with the new members
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19767/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20769/ : FAILURE

Compile error at [2022-06-06T14:17:13.450Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6240" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20769/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20114/ : FAILURE

Compile error at [2022-06-06T14:14:22.022Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/buckets_test.cc:18:34:
error: static assertion failed: Bucket size changed, the reset test must be updated with the new members
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20114/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7693/ : FAILURE

Failure of GoogleTest "TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
[2022-06-06T14:29:05.094Z] unknown file: Failure
[2022-06-06T14:29:05.094Z] C++ exception with description "EOF: Connection reset by peer" thrown in the test body.
[2022-06-06T14:29:05.094Z] [  FAILED  ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (4 ms)
TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7693/ )

Timeout of a CTest test [2022-06-06T14:27:44.367Z]  76/447 Test #267: ep-engine_ep_unit_tests.RangeScanFullAndValueEviction/RangeScanTest .....................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7693/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16982/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
